#!/usr/bin/env python3
"""
äº‹ä»¶æ€»çº¿ + å¤šç¼–è§£ç å™¨ä½¿ç”¨ç¤ºä¾‹

å±•ç¤ºå¦‚ä½•:
1. ä½¿ç”¨ä¸åŒçš„ç¼–è§£ç å™¨é…ç½®äº‹ä»¶æ€»çº¿
2. å‘å¸ƒäº‹ä»¶å¹¶ä½¿ç”¨ä¸åŒçš„ç¼–è§£ç æ ¼å¼
3. æ¥æ”¶å’Œå¤„ç†äº‹ä»¶

è¿è¡Œç¤ºä¾‹: python event_bus_demo.py+
"""

import asyncio
import json
import uuid
from datetime import datetime

from idp.framework.infrastructure.messaging.core.base_message import MessageEnvelope
from idp.framework.infrastructure.messaging.core.codec import get_codec
from idp.framework.infrastructure.messaging.dispatcher.decorator import event_handler
from idp.framework.infrastructure.messaging.pulsar.event_bus import PulsarEventBus

# å®šä¹‰ç¤ºä¾‹äº‹ä»¶æ•°æ®
USER_REGISTERED_EVENT = {
    "user_id": str(uuid.uuid4()),
    "email": "new_user@example.com",
    "name": "New User",
    "registered_at": datetime.utcnow().isoformat()
}

ORDER_CREATED_EVENT = {
    "order_id": str(uuid.uuid4()),
    "user_id": "user-123",
    "items": [
        {"product_id": "prod-1", "quantity": 2, "price": 9.99},
        {"product_id": "prod-2", "quantity": 1, "price": 19.99}
    ],
    "total_amount": 39.97,
    "created_at": datetime.utcnow().isoformat()
}


# æ³¨å†Œäº‹ä»¶å¤„ç†å™¨
@event_handler("user.registered")
async def handle_user_registered(event: MessageEnvelope):
    """å¤„ç†ç”¨æˆ·æ³¨å†Œäº‹ä»¶"""
    print(f"\nâœ… æ¥æ”¶åˆ°ç”¨æˆ·æ³¨å†Œäº‹ä»¶ ({event.correlation_id})")
    print(f"   äº‹ä»¶æ•°æ®: {json.dumps(event.payload, ensure_ascii=False, indent=2)}")
    print(f"   å¤„ç†æ—¶é—´: {datetime.utcnow().isoformat()}")


@event_handler("order.created")
async def handle_order_created(event: MessageEnvelope):
    """å¤„ç†è®¢å•åˆ›å»ºäº‹ä»¶"""
    print(f"\nâœ… æ¥æ”¶åˆ°è®¢å•åˆ›å»ºäº‹ä»¶ ({event.correlation_id})")
    print(f"   äº‹ä»¶æ•°æ®: {json.dumps(event.payload, ensure_ascii=False, indent=2)}")
    print(f"   å¤„ç†æ—¶é—´: {datetime.utcnow().isoformat()}")


async def publish_events_with_codec(codec_name: str):
    """ä½¿ç”¨æŒ‡å®šç¼–è§£ç å™¨å‘å¸ƒäº‹ä»¶"""
    # è·å–ç¼–è§£ç å™¨
    codec = get_codec(codec_name)
    
    # åˆ›å»ºå¸¦ç‰¹å®šç¼–è§£ç å™¨çš„äº‹ä»¶æ€»çº¿
    event_bus = PulsarEventBus(codec_name=codec_name)
    
    # ç”Ÿæˆå…³è”ID (ç”¨äºè·Ÿè¸ªè¯·æ±‚)
    correlation_id = f"demo-{str(uuid.uuid4())[:8]}"
    
    print(f"\nğŸš€ ä½¿ç”¨ {codec_name} ç¼–è§£ç å™¨å‘å¸ƒäº‹ä»¶...")
    
    # å‘å¸ƒç”¨æˆ·æ³¨å†Œäº‹ä»¶
    await event_bus.publish_event(
        event_type="user.registered",
        payload=USER_REGISTERED_EVENT,
        source="demo-service",
        correlation_id=correlation_id
    )
    print(f"   å·²å‘å¸ƒ user.registered äº‹ä»¶")
    
    # å‘å¸ƒè®¢å•åˆ›å»ºäº‹ä»¶
    await event_bus.publish_event(
        event_type="order.created",
        payload=ORDER_CREATED_EVENT,
        source="demo-service",
        correlation_id=correlation_id
    )
    print(f"   å·²å‘å¸ƒ order.created äº‹ä»¶")


async def subscribe_to_events():
    """è®¢é˜…å¹¶å¤„ç†äº‹ä»¶"""
    # åˆ›å»ºäº‹ä»¶æ€»çº¿
    event_bus = PulsarEventBus()
    
    print("\nğŸ”” å¯åŠ¨äº‹ä»¶è®¢é˜…...")
    # å¯åŠ¨è®¢é˜…ï¼Œç›‘å¬äº‹ä»¶
    await asyncio.gather(
        event_bus.run_subscription("persistent://public/default/user.registered"),
        event_bus.run_subscription("persistent://public/default/order.created")
    )


async def run_demo():
    """è¿è¡Œå®Œæ•´çš„æ¼”ç¤º"""
    # å¯åŠ¨äº‹ä»¶è®¢é˜…ä»»åŠ¡
    subscription_task = asyncio.create_task(subscribe_to_events())
    
    # ç­‰å¾…ä¸€ä¼šå„¿ä»¥ç¡®ä¿è®¢é˜…å·²ç»å‡†å¤‡å¥½
    await asyncio.sleep(2)
    
    # ä½¿ç”¨ä¸åŒç¼–è§£ç å™¨å‘å¸ƒäº‹ä»¶
    await publish_events_with_codec("json")
    await asyncio.sleep(3)  # ç­‰å¾…å¤„ç†å®Œæˆ
    
    await publish_events_with_codec("protobuf")
    await asyncio.sleep(3)  # ç­‰å¾…å¤„ç†å®Œæˆ
    
    await publish_events_with_codec("avro")
    await asyncio.sleep(3)  # ç­‰å¾…å¤„ç†å®Œæˆ
    
    # å–æ¶ˆè®¢é˜…ä»»åŠ¡
    subscription_task.cancel()
    try:
        await subscription_task
    except asyncio.CancelledError:
        pass


if __name__ == "__main__":
    print("\n===== äº‹ä»¶æ€»çº¿å¤šç¼–è§£ç å™¨ç¤ºä¾‹ =====\n")
    print("è¯¥ç¤ºä¾‹å±•ç¤ºå¦‚ä½•ä½¿ç”¨ä¸åŒçš„ç¼–è§£ç å™¨é…ç½®äº‹ä»¶æ€»çº¿å¹¶å‘å¸ƒ/è®¢é˜…äº‹ä»¶")
    asyncio.run(run_demo()) 